# daqlite

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt
.ci/docker/: Dockerfile.deploy  Dockerfile_entrypoint.sh
cmake/: QtLibraryConfig.cmake
configs/: dreamoffice.json  lokioffice.json
configs/amor/: amor.json  amormon_ch0.json  amortof.json  amortof2d.json  multi_amor.json
configs/amorb/: amormon.json  amortof.json
configs/bifrost/: bifrost.json  bifrosttof.json  fylgje.json  test2.json
configs/cbm/: ibm_tof.json
configs/dream/: dream.json  dream_beam_monitor.json  dream_bwe.json  dream_cbm.json  dream_fwe.json  dream_hr.json  dream_mantle.json  dream_sans.json  dream_tof.json
configs/estia/: estia.json
configs/freia/: freia.json  freiamon_ch0.json  freiamon_ch1.json  freiatof.json
configs/heimdal/: heimdal.json
configs/loki/: loki.json  loki_12_ring_test.json  loki_bank0.json  loki_bank1.json  loki_bank2.json  loki_bank3.json  loki_bank4.json  loki_bank5.json  loki_bank6.json  loki_bank7.json  loki_bank8.json  lokimon_ch0.json  lokimon_ch1.json  lokitof.json  multi_loki.json
configs/loki/stfc/: loki.json  lokimon_ch0.json  lokimon_ch1.json  lokitof.json
configs/magic/: magic.json  magic_frdet.json  magic_padet.json
configs/miracles/: miracles.json  miraclestof.json
configs/nmx/: nmx.json
configs/odin/: odin.json  odin_next.json  odintof.json  odintof_next.json
configs/tbl3he/: tbl3he.json
configs/tblmb/: tblmb.json
configs/test/: bifrost.json  bifrosttof.json
configs/ttlmon/: ttlmontof.json
configs/vipdemo/: freiatof.json  loki.json  loki4amp.json  lokitof.json
scripts/: IPADDRESSES  README.md  amor.bash  amorb.bash  bifrost.bash  bifrost_fyljge.bash  cbm.bash  dream.bash  freia.bash  heimdal.bash  loki.bash  loki_12_ring_test.bash  lokistfc.bash  magic.bash  miracles.bash  nmx.bash  odin.bash  tbl3he.bash  ttlmon.bash  vipdemo.bash
src/: CMakeLists.txt
src/ar51bifrost/: CAENGraph.cpp  CAENGraph.h  CMakeLists.txt  ESSConsumer.cpp  ESSConsumer.h  GraphBase.cpp  MainWindow.cpp  MainWindow.h  WorkerThread.h  ar51bifrost.cpp  bifrost.h
src/ar51consumer/: CAENGraph.cpp  CAENGraph.h  CDTGraph.cpp  CDTGraph.h  CMakeLists.txt  ESSConsumer.cpp  ESSConsumer.h  GraphBase.cpp  GraphBase.h  MainWindow.cpp  MainWindow.h  VMM3aGraph.cpp  VMM3aGraph.h  WorkerThread.cpp  WorkerThread.h  ar51consumer.cpp
src/ar52consumer/: CMakeLists.txt  ESSConsumer.cpp  ESSConsumer.h
src/daqlite/: AbstractPlot.cpp  AbstractPlot.h  Binner.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Custom2DPlot.cpp  Custom2DPlot.h  CustomAMOR2DTOFPlot.cpp  CustomAMOR2DTOFPlot.h  CustomTofPlot.cpp  CustomTofPlot.h  ESSConsumer.cpp  ESSConsumer.h  HistogramPlot.cpp  HistogramPlot.h  JsonFile.h  KafkaConfig.cpp  KafkaConfig.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ThreadSafeVector.h  WorkerThread.cpp  WorkerThread.h  daqlite.cpp
src/daqlite/types/: CommonTypes.h  DataType.h  PlotType.h
src/fylgje/: CDCalibration.cpp  CDCalibration.h  CMakeLists.txt  Calibration.cpp  Calibration.h  Configuration.cpp  Configuration.h  ESSConsumer.cpp  ESSConsumer.h  Interval.cpp  Interval.h  KafkaConfig.cpp  KafkaConfig.h  WorkerThread.cpp  WorkerThread.h  cycles.h  data_manager.cpp  data_manager.h  datastore_bifrost.h  fylgje_calibration.cpp  fylgje_data.cpp  fylgje_main.cpp  fylgje_window.cpp  fylgje_window.h  fylgje_window.ui  plot_manager.h  table_item_types.h  two_spin_box.h
src/schemasniffer/: CMakeLists.txt  ESSConsumer.cpp
